--- a/nmtvis-server/requirements.txt
+++ b/nmtvis-server/requirements.txt
@@ -5,17 +5,22 @@ attrs==20.3.0
 blis==0.4.1
 Brotli==1.0.9
 cachetools==4.2.1
-catalogue==1.0.0
+catalogue==2.0.4
 certifi==2020.12.5
 chardet==4.0.0
+charset-normalizer==2.0.4
 click==7.1.2
+colorama==0.4.4
+cycler==0.10.0
 cymem==2.0.5
+de-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.1.0/de_core_news_sm-3.1.0-py3-none-any.whl
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.1.0/en_core_web_sm-3.1.0-py3-none-any.whl
 Flask==1.1.1
 Flask-Compress==1.4.0
 Flask-Cors==3.0.8
 Flask-JWT-Extended==3.24.0
 Flask-SQLAlchemy==2.4.0
-fsspec==0.8.7
+fsspec==2021.7.0
 future==0.18.2
 google-auth==1.27.1
 google-auth-oauthlib==0.4.3
@@ -24,6 +29,8 @@ idna==2.10
 importlib-metadata==3.7.2
 itsdangerous==1.1.0
 Jinja2==2.11.3
+joblib==1.0.1
+kiwisolver==1.3.1
 Markdown==3.3.4
 MarkupSafe==1.1.1
 matplotlib==3.3.4
@@ -33,37 +40,49 @@ nltk==3.5
 numpy==1.20.1
 oauthlib==3.1.0
 packaging==20.9
+pandas==1.3.2
 passlib==1.7.4
 pathy==0.4.0
+Pillow==8.3.1
 plac==1.1.3
+portalocker==2.3.1
 preshed==3.0.5
 protobuf==3.15.5
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pydantic==1.7.3
+pydantic==1.7.4
+pyDeprecate==0.3.1
 PyJWT==1.7.1
 pyparsing==2.4.7
+python-dateutil==2.8.2
 python-Levenshtein-wheels==0.13.2
-pytorch-lightning==1.2.2
+pytorch-lightning==1.4.2
+pytz==2021.1
 PyYAML==5.3.1
 rake-nltk==1.0.4
+regex==2021.8.21
 requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
+sacrebleu==2.0.0
+sacremoses==0.0.45
 scipy==1.6.1
+seaborn==0.11.2
 simplediff==1.0
 six==1.15.0
 smart-open==3.0.0
-spacy==2.2.3
-spacy-legacy==3.0.1
+spacy==3.1.1
+spacy-legacy==3.0.8
 SQLAlchemy==1.3.23
 SQLAlchemy-Utils==0.36.8
-srsly==1.0.5
+srsly==2.4.1
 subword-nmt==0.3.7
+tabulate==0.8.9
 tensorboard==2.4.1
 tensorboard-plugin-wit==1.8.0
-thinc==7.3.1
-torch==1.8.0
+thinc==8.0.8
+torch==1.9.0
+torchmetrics==0.5.0
 torchtext==0.4.0
 tqdm==4.59.0
 typer==0.3.2
